# example-app

./: .gitignore  README.md
application/: .dockerignore  .env.ci  .flake8  Dockerfile  Makefile  README.md  docker-compose.yaml  pyproject.toml
application/app/: main.py  settings.py
application/app/.circleci/: config.yaml
application/app/controllers/: users.py
application/app/core/: db.py
application/app/migrations/: env.py
application/app/migrations/versions/: 33708d992efc_database_creation.py
application/app/models/: __init__.py  users.py
application/app/routers/: users.py
application/app/schemas/: users.py
application/app/tests/: test_main.py
helm-charts/app/: Chart.yaml  values.yaml
helm-charts/app/templates/: _helpers.tpl  deployment.yaml  pre-upgrade.yaml  service.yaml
helm-charts/postgresql/: README.md  values.default.yaml
